tests/negative/gold/missing-name-test.gold
tests/negative/missing-name-test.toit:5:1: error: Invalid name for declaration
4
^
tests/negative/missing-name-test.toit:6:3: warning: Unusual indentation for parameter
  unresolved
  ^~~~~~~~~~
tests/negative/missing-name-test.toit:11:1: error: Invalid name for declaration
(499 + 33 + unresolved)
^
tests/negative/missing-name-test.toit:11:2: error: Unexpected token: <integer>
(499 + 33 + unresolved)
 ^~~
tests/negative/missing-name-test.toit:14:3: error: Invalid name for declaration
  4
  ^
tests/negative/missing-name-test.toit:15:5: warning: Unusual indentation for parameter
    unresolved
    ^~~~~~~~~~
tests/negative/missing-name-test.toit:20:3: error: Invalid name for declaration
  (499 + 33 + unresolved)
  ^
tests/negative/missing-name-test.toit:20:4: error: Unexpected token: <integer>
  (499 + 33 + unresolved)
   ^~~
tests/negative/missing-name-test.toit:22:11: error: Expected name of declaration
  abstract  // comment
          ^~~~~~~~~~~~
tests/negative/missing-name-test.toit:23:9: error: Expected name of declaration
  static    // comment
        ^~~~~~~~~~~~~~
tests/negative/missing-name-test.toit:24:11: error: Expected name of declaration
  abstract  /* comment
          ^
tests/negative/missing-name-test.toit:26:9: error: Expected name of declaration
  static    /* comment
        ^
tests/negative/missing-name-test.toit:11:1: error: Missing body
(499 + 33 + unresolved)
^
tests/negative/missing-name-test.toit:20:3: error: Missing body
  (499 + 33 + unresolved)
  ^
tests/negative/missing-name-test.toit:22:11: error: Members can't be abstract in non-abstract class
  abstract  // comment
          ^~~~~~~~~~~~
tests/negative/missing-name-test.toit:23:9: error: Missing body
  static    // comment
        ^~~~~~~~~~~~~~
tests/negative/missing-name-test.toit:24:11: error: Members can't be abstract in non-abstract class
  abstract  /* comment
          ^
tests/negative/missing-name-test.toit:26:9: error: Missing body
  static    /* comment
        ^
tests/negative/missing-name-test.toit:30:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/missing-name-test.toit:31:10: error: Unresolved identifier: 'unresolved'
  a := A unresolved
         ^~~~~~~~~~
tests/negative/missing-name-test.toit:31:8: error: Argument mismatch for 'A'
Method does not take any arguments, but one was provided
  a := A unresolved
       ^
Compilation failed
